--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [Giving Hero]
-description: [Privacy Policy for using the Giving Hero app.]
+title: [Privacy Policy]
+description: [Privacy Policy for using the Giving Hero mobile app.]
