remove view on github

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
-title: [Privacy Policy]
-description: [Privacy Policy for using the Giving Hero mobile app.]
+title: [Giving Hero]
+github:
+  is_project_page: false
